--- a/backend-medical/backend/package.json
+++ b/backend-medical/backend/package.json
@@ -21,11 +21,17 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nest-middlewares/cors": "^6.0.1",
+    "@nest-middlewares/helmet": "^6.0.0",
+    "@nest-middlewares/morgan": "^6.0.0",
     "@nestjs/common": "^7.5.1",
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "csv": "^5.5.0",
+    "fastify-helmet": "^5.3.1",
+    "nestjs-flub": "^0.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3"
