--- a/backend-medical/backend/package.json
+++ b/backend-medical/backend/package.json
@@ -29,6 +29,7 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/typeorm": "^7.1.5",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "csv": "^5.5.0",
