--- a/CabinetMedicalFrontEnd/angular.json
+++ b/CabinetMedicalFrontEnd/angular.json
@@ -25,8 +25,9 @@
               "node_modules/perfect-scrollbar/css/perfect-scrollbar.css",
               "node_modules/ngx-toastr/toastr.css",
               "src/assets/scss/now-ui-dashboard.scss",
-              "node_modules/@fullcalendar/common/main.css",
-              "node_modules/@fullcalendar/daygrid/main.css",
+                "node_modules/@fullcalendar/core/main.min.css",
+                "node_modules/@fullcalendar/daygrid/main.min.css",
+                "node_modules/@fullcalendar/timegrid/main.min.css",
               "src/assets/demo/demo.css"
             ],
             "scripts": [
@@ -85,7 +86,7 @@
               "node_modules/ngx-toastr/toastr.css",
               "src/assets/scss/now-ui-dashboard.scss",
               "node_modules/jquery/dist/jquery.js",
-
+              "node_modules/ngx-toastr/toastr.css",
               "src/assets/demo/demo.css"
             ],
             "assets": [
@@ -142,5 +143,24 @@
   },
   "cli": {
     "analytics": false
-  }
+  },
+  "data": [
+    {
+        "id": 1,
+    "title": "All Day Event",
+    "start": "2017-02-01"
+    },
+  {
+        "id": 2,
+    "title": "Long Event",
+    "start": "2017-02-07",
+    "end": "2017-02-10"
+    },
+  {
+    "id": 3,
+    "title": "Repeating Event",
+    "start": "2017-02-09T16:00:00"
+    }
+  ]
+
 }
