--- a/CabinetMedicalFrontEnd/package.json
+++ b/CabinetMedicalFrontEnd/package.json
@@ -25,8 +25,10 @@
     "@angular/platform-server": "11.0.5",
     "@angular/router": "11.0.5",
     "@fullcalendar/angular": "^5.6.0",
-    "@fullcalendar/daygrid": "^5.6.0",
-    "@fullcalendar/interaction": "^5.6.0",
+    "@fullcalendar/core": "^4.1.0",
+    "@fullcalendar/daygrid": "^5.7.0",
+    "@fullcalendar/interaction": "^5.7.0",
+    "@fullcalendar/timegrid": "^5.7.0",
     "@ng-bootstrap/ng-bootstrap": "8.0.0",
     "ajv": "7.0.1",
     "ajv-keywords": "4.0.0",
@@ -43,7 +45,7 @@
     "jw-bootstrap-switch-ng2": "2.0.5",
     "moment": "^2.29.1",
     "ng2-charts": "2.4.2",
-    "ngx-toastr": "13.2.0",
+    "ngx-toastr": "^13.2.0",
     "nouislider": "14.6.3",
     "perfect-scrollbar": "1.5.0",
     "popper.js": "1.16.1",
